--- a/torrent/Cargo.toml
+++ b/torrent/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 serde = { version = "1", features = ["derive"] }
 serde_bencode = "0.2.4"
 serde_bytes = "0.11.17"
+sha1 = "0.10.6"
+thiserror = "2.0.12"
