add tracker to get the peer list

--- a/torrent/Cargo.toml
+++ b/torrent/Cargo.toml
@@ -4,8 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bytes = "1.10.1"
+percent-encoding = "2.3.1"
+reqwest = "0.12.20"
 serde = { version = "1", features = ["derive"] }
 serde_bencode = "0.2.4"
 serde_bytes = "0.11.17"
 sha1 = "0.10.6"
 thiserror = "2.0.12"
+tokio = { version = "1", features = ["full"] }
+url = "2.5.4"
+
+[dev-dependencies]
+mockito = "1.7.0"
