--- a/torrent/Cargo.toml
+++ b/torrent/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bitvec = "1.0.1"
 bytes = "1.10.1"
 futures = "0.3.31"
 log = "0.4.27"
@@ -15,6 +16,7 @@ serde_bytes = "0.11.17"
 sha1 = "0.10.6"
 thiserror = "2.0.12"
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.17"
 tokio-util = "0.7.15"
 url = "2.5.4"
 
